made project 1 correct, added a better scrollbar

--- a/style.css
+++ b/style.css
@@ -10,6 +10,37 @@ h1 {
     font-size: 50px;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-top: 5%;
+}
+
+h2 {
+    color: #fff;
+    text-align: left;
+    padding-left: 4.5%;
+    padding-top: 2%;
+    padding-bottom: 1%;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    background-color: #202020;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #ff8177;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #333;
+    border-radius: 10px;
+}
+
 .header-container {
     display: flex;
     justify-content: center;
@@ -157,3 +188,15 @@ p {
 .slideInBottom {
     animation: slideInBottom 1s ease-in 0s 1 normal both
 }
+
+#view-project-btn-1 {
+    margin: 20px;
+    margin-left: 10%;
+}
+
+#view-project-btn-2 {
+    margin: 20px;
+    margin-left: 10%;
+}
+
+
